Added the footer.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <body>
     <h1>Welcome to the Poem Generator</h1>
 
+    <footer>
+      This project was coded by
+      <a href="https://github.com/Bontle-tech" target="blank">Bontle</a> 🌺 and
+      is open-sourced on
+      <a href="https://github.com/Bontle-tech/poem-generator" target="blank"
+        >GitHub</a
+      >
+      and is hosted on
+      <a href="https://bontles-ai-poem-generator.netlify.app/" target="blank"
+        >Netlify</a
+      >
+    </footer>
+
     <script src="src/index.js"></script>
   </body>
 </html>
