--- a/index.html
+++ b/index.html
@@ -3,44 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/style.css" />
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI Poem Generator</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>AI Poem Generator</h1>
+      </header>
 
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic of the poem..."
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        poem part will go here.
-        <br />
-        poem part will go here.
-      </div>
-    </main>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of the poem..."
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          poem part will go here.
+          <br />
+          poem part will go here.
+        </div>
+      </main>
 
-    <footer>
-      This project was coded by
-      <a href="https://github.com/Bontle-tech" target="blank">Bontle</a> 🌺 and
-      is open-sourced on
-      <a href="https://github.com/Bontle-tech/poem-generator" target="blank"
-        >GitHub</a
-      >
-      and is hosted on
-      <a href="https://bontles-ai-poem-generator.netlify.app/" target="blank"
-        >Netlify</a
-      >
-    </footer>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/Bontle-tech" target="blank">Bontle</a> 🌺
+        and is open-sourced on
+        <a href="https://github.com/Bontle-tech/poem-generator" target="blank"
+          >GitHub</a
+        >
+        and is hosted on
+        <a href="https://bontles-ai-poem-generator.netlify.app/" target="blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
 
     <script src="src/index.js"></script>
   </body>
