--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <form id="poem-generator-form">
           <input
             type="text"
-            placeholder="Enter the topic of the poem..."
+            placeholder="Enter the topic of the poem you'd like to generate..."
             autofocus
             required
             autocomplete="off"
@@ -34,7 +34,8 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="poem" id="poem"></div>
+        <small class="hint">i.e: Love, Friendship, Travel..</small>
+        <div class="poem hidden" id="poem"></div>
       </main>
 
       <footer>
